# djangorestframework-hybridrouter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  django&rst_views&more.puml  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-CI.yml  python-publish.yml  update-version.yml
hybridrouter/: __init__.py  apps.py  hybridrouter.py  utils.py
hybridrouter/tests/: conftest.py  models.py  serializers.py  test_hybrid_router.py  utils.py  views.py  viewsets.py
test/app/: .coveragerc  requirements.txt
test/app/app/: settings.py  urls.py
test/app/hybridroutertest/: apps.py  models.py  tests.py  views.py  viewsets.py
test/app/hybridroutertest/migrations/: 0001_initial.py
test/app/hybridroutertest/tests/: testi.py  testo.py
tests/: conftest.py  test_hybrid_router.py
